src/test/deca/context/invalid/method_param_02.deca
// Description:
//    Teste l'utilisation d'un paramètre de type non défini.
//
// Resultats:
//    Ligne 10: Le type String n'est pas defini
//
// Historique:
//    cree le 20/01/2023
class A{
    void test(String a){

    }
}
